--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <link rel=stylesheet" href="./css/progress-bar.css">
     <!--custom-->
     <link rel=stylesheet" href="./css/custom-home.css">
+    
 
 </head>
 
@@ -27,8 +28,20 @@
         HERO CONTENT
     </div>
     <!--HERO END-->
-    <!--CONTENT-->
-    <!--FOOTER-->
+
+    <!--CONTENT START-->
+    <main>
+        MAIN CONTENT
+    </main>
+    <!--CONTENT END-->
+
+    <!--FOOTER START-->
+    <footer>
+        FOOTER CONTENT
+    </footer>
+    <!--FOOTER END-->
+
+    <script src="./js/main.js" type="module" defer></script>
 </body>
 
 </html>
