--- a/index.html
+++ b/index.html
@@ -25,7 +25,18 @@
 <body>
     <!--HERO START-->
     <div class="hero">
-        HERO CONTENT
+        <img src"" alt="">
+        <h1></h1>
+        <p></p>
+        <div>
+            CLOCK
+        </div>
+        <form>
+            SUSCRIBE FORM
+        </form>
+        <div>
+            MOUSE
+         <div>
     </div>
     <!--HERO END-->
 
@@ -41,7 +52,7 @@
     </footer>
     <!--FOOTER END-->
 
-    <script src="./js/main.js" type="module" defer></script>
+    <script src="./js/main-home.js" type="module" defer></script>
 </body>
 
 </html>
